# SlicerPetSpectAnalysis

./: CMakeLists.txt  SubModOne.py  index.html  params.json
CarotidSegmentation/: CMakeLists.txt  CarotidSegmentation.py  Cropmv.py  TestPy1.py
EpilepsyCLI/: CMakeLists.txt  EpilepsyCLI.cxx  EpilepsyCLI.xml
EpilepsyCppModule/: CMakeLists.txt  qSlicerEpilepsyCppModuleModule.h  qSlicerEpilepsyCppModuleModuleWidget.h
EpilepsyCppModule/Logic/: vtkSlicerEpilepsyCppModuleLogic.cxx  vtkSlicerEpilepsyCppModuleLogic.h
EpilepsyCppModule/Resources/: qSlicerEpilepsyCppModuleModule.qrc
EpilepsyCppModule/Resources/UI/: qSlicerEpilepsyCppModuleFooBarWidget.ui  qSlicerEpilepsyCppModuleModuleWidget.ui
EpilepsyCppModule/Widgets/: qSlicerEpilepsyCppModuleFooBarWidget.cxx  qSlicerEpilepsyCppModuleFooBarWidget.h
EpilepsyPythonModule/: EpilepsyPythonModule.py
EpileptogenicFocusDetection/: EpileptogenicFocusDetection.py
EpileptogenicFocusDetection/EpileptogenicFocusDetectionLogic/: AContrarioLogic.py  EpileptogenicFocusDetectionLogic.py
GeneracionFantomas/GeneracionFantomas/: Instructions.txt~
GeneracionFantomas/GeneracionFantomas/MatlabCodes/: Description.txt~  FILES DESCRIPTION.txt  FILES DESCRIPTION.txt~
GeneracionFantomas/GeneracionFantomas/MatlabCodes/Files/: TKMParameters.m
GeneracionFantomas/GeneracionFantomas/MatlabCodes/Functions/: gentTACs.m  pTAC_feng.m
GeneracionFantomas/GeneracionFantomas/MatlabCodes/Scripts/: ActivityMapGenScript.m  ActivityMapGenScript.m~  TACsGenerationScript.m
GeneracionFantomas/GeneracionFantomas/SimulationScripts/: 962  ASIM_scriptSimulacion.sh  ASIM_scriptSimulacion.sh~  FBP2D_962.par  FilesExplanation.txt  Instrucciones.txt~  hdr_E_m962.hs  header.yhdr  store_dPETsimulated.sh  store_dPETsimulated.sh~
SlicerEpilepsyToolkit/EpilepsyCppModule/: qSlicerEpilepsyCppModuleModule.cxx  qSlicerEpilepsyCppModuleModuleWidget.cxx
SlicerEpilepsyToolkit/EpilepsyPythonModule/: CMakeLists.txt
SlicerEpilepsyToolkit/EpileptogenicFocusDetection/: CMakeLists.txt
SlicerEpilepsyToolkit/EpileptogenicFocusDetection/EpileptogenicFocusDetectionLogic/: EpileptogenicFocusDetectionLogic.py  __init__.py
dPetBrainQuantification/: CMakeLists.txt  TestPy1.py  dPetBrainQuantification.py
